Fixes inconsistent margin and result overflow

--- a/air/assets/css/queries.css
+++ b/air/assets/css/queries.css
@@ -73,6 +73,7 @@
   flex-grow: 1;
   margin-right: 1em;
   background: linear-gradient(90deg, #f7f7f7, 5%, #f7f7f7, 8%, white);
+  overflow-x: auto;
 }
 
 .react-codemirror2.editable {
